force-app/main/default/objects/PDM_PricebookEntry_Dump__c/PDM_PricebookEntry_Dump__c.object-meta.xml
<CustomObject>
    <description>SOX object - Custom Object</description>
    <label>PDM PricebookEntry Dump</label>
    <nameField>
        <label>PricebookEntryId Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDM PricebookEntry Dumps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>