force-app/main/default/objects/PDM_PricebookEntry_Dump__c/fields/List_Price_Status__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>List Price Status</label>
    <type>Checkbox</type>
</CustomField>