force-app/main/default/objects/PDM_PricebookEntry_Dump__c/fields/Pricebookentry_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebookentry_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Pricebookentry External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>