force-app/main/default/objects/PDM_PricebookEntry_Dump__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PDM PricebookEntry Dumps</relationshipLabel>
    <relationshipName>PDM_PricebookEntry_Dumps</relationshipName>
    <type>Lookup</type>
</CustomField>